change class name

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 			<!-- titolo -->
 			<a href="" class="logo">Agenda 2030</a>
 			<!-- nav -->
-			<input type="checkbox" class="menu-btn" id="menu-btn">
-			<label for="menu-btn" class="menu-icon">
-				<span class="nav-icon"></span>
+			<input type="checkbox" class="menuBtn" id="menuBtn">
+			<label for="menuBtn" class="menuIcon">
+				<span class="navIcon"></span>
 			</label>
 			<ul class="menu">
 				<li><a href="#">Home</a></li>
@@ -25,7 +25,7 @@
 		</header>
 
 		<!-- grid -->
-		<div class="image">
+		<div class="grid">
 			<div class="sdgs">
 				<a href="#"><img src="/src/img/index/icon/SDG1.jpg" alt="SDG 1"></a>
 				<a href="#"><img src="/src/img/index/icon/SDG2.jpg" alt="SDG 2"></a>
@@ -44,7 +44,7 @@
 				<a href="#"><img src="/src/img/index/icon/SDG15.jpg" alt="SDG 15"></a>
 				<a href="#"><img src="/src/img/index/icon/SDG16.jpg" alt="SDG 16"></a>
 			</div>
-			<div class="sdg17">
+			<!-- <div class="sdg17">
 				<img src="/src/img/index/icon/SDG17.jpg" alt="SDG 17">
 				<div class="text">
 					<h1>title</h1>
@@ -53,14 +53,14 @@
 					</p>
 				</div>
 			
-			</div>
+			</div> -->
 		</div>
 		
 		
 	</body>
 
 	<footer class="footer">
-		<img src="../../public/index/image/sc" alt="">
+		<img src="#" alt="">
 		<div class="contacts">
 			<h3>CONTATTI</h3>
 			<strong>Istituto Istruzione Superiore J.F. Kennedy Monselice</strong>
