--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 		<img src="#" alt="">
 		<div class="contacts">
 			<h3>CONTATTI</h3>
-			<strong>Istituto Istruzione Superiore J.F. Kennedy Monselice</strong>
+			<!-- <strong>Istituto Istruzione Superiore J.F. Kennedy Monselice</strong> -->
 			<ul>
 				<li> 
 					<i></i>
